close按钮和左侧icon水平对齐

--- a/packages/ui/alert/src/index.less
+++ b/packages/ui/alert/src/index.less
@@ -40,6 +40,8 @@
             // 由于alert-with-description的icon现在是小的，所以有description时，距离上面要和.@{ant-prefix}-alert-icon一样
             // top: 11px;
             align-self: flex-start;
+            // 和 左侧 icon 水平对齐
+            margin-block-start: 4px;
         }
     }
 
