--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -3,7 +3,7 @@
 .@{osui-modal-class-prefix} {
     .@{ant-prefix}-modal-header {
         padding: var(--modal-header-padding);
-        border-radius: var(--border-radius-4) var(--border-radius-4) 0 0;
+        border-radius: var(--border-radius-base) var(--border-radius-base) 0 0;
         border-bottom: 1px solid #FFF;
     }
 
@@ -38,8 +38,8 @@
     }
 
     .@{ant-prefix}-modal-content {
-        border-radius: var(--border-radius-4);
-        padding: 0;
+        border-radius: var(--border-radius-base);
+        padding: 0 0;
 
         .@{ant-prefix}-modal-close {
             top: var(--modal-close-top);
@@ -80,9 +80,13 @@
     }
 }
 
-.@{osui-modal-class-prefix}-confirm, .@{ant-prefix}-modal-confirm {
-    .@{ant-prefix}-modal-confirm-title {
-        font-size: var(--modal-title-font-size);
+// Confirm
+.@{osui-modal-class-prefix}-confirm,
+.@{ant-prefix}-modal-confirm {
+
+    .@{ant-prefix}-modal-content {
+        border-radius: var(--border-radius-base);
+        padding: 0 0;
     }
 
     .@{ant-prefix}-modal-body{
@@ -92,7 +96,7 @@
     .@{ant-prefix}-modal-confirm-body {
         min-height: 80px;
         border-bottom: var(--modal-body-border-bottom);
-        display: block; // 覆盖antd5的flex布局制式
+        align-items: start;
 
         & > svg.osui-icon {
             float: left;
@@ -103,8 +107,13 @@
         }
     }
 
+    .@{ant-prefix}-modal-confirm-content {
+        flex: 1;
+    }
+
     .@{ant-prefix}-modal-confirm-body .@{ant-prefix}-modal-confirm-title {
         font-size: 16px;
+        flex: auto;
     }
 
     .@{ant-prefix}-modal-confirm-body .@{ant-prefix}-modal-confirm-content {
@@ -136,25 +145,6 @@
     .@{ant-prefix}-modal-close {
         top: var(--modal-close-top);
         right: var(--modal-close-right);
-        height: 10px;
-        width: 10px;
-
-        .@{ant-prefix}-modal-close-x {
-            line-height: 10px;
-        }
-    }
-
-    .@{ant-prefix}-modal-confirm-btns {
-        margin-top: 24px;
-
-        .@{ant-prefix}-btn-default {
-            border-color: #D4D6D9;
-        }
-
-        .@{ant-prefix}-btn-primary {
-            border-color: #2468F2;
-            box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
-        }
         height: 10px;
         width: 10px;
 
