--- a/packages/ui/slider/src/index.less
+++ b/packages/ui/slider/src/index.less
@@ -2,101 +2,40 @@
 
 .@{osui-slider-class-prefix} {
     &.@{ant-prefix}-slider {
-        .@{ant-prefix}-slider-handle {
-            &-dragging&-dragging&-dragging {
-                box-shadow: none;
-            }
-
-            &:focus {
-                box-shadow: none;
-            }
+        .@{ant-prefix}-slider-handle::after {
+            box-shadow: 0 0 0 1px var(--theme-primary-color);
         }
-        // 调整分步的slider
-        &:not(.osui-slider-icloud) {
-            &:not(.@{ant-prefix}-slider-disabled) {
-                // hover的效果要排除disabled
-                .@{ant-prefix}-slider-dot {
-                    &:hover {
-                        width: 12px;
-                        height: 12px;
-                        margin-top: -3px;
-                        background: #fff;
-                        border: 4px solid var(--theme-primary-color);
-                        transform: translateX(-17%);
-                    }
-                }
-            }
-
-            .@{ant-prefix}-slider-dot {
-                border: 4px solid var(--theme-border-color-split);
-
-                &-active {
-                    border: 4px solid var(--theme-primary-color);
-                }
-            }
-        }
-    }
-    // 对icloud样式的调整
-    &-icloud {
-        &.@{ant-prefix}-slider.@{ant-prefix}-slider-disabled {
-            .@{ant-prefix}-slider-rail {
-                background: var(--color-gray-3);
-            }
-
-            .@{ant-prefix}-slider-handle {
-                background: var(--theme-disabled-color);
-            }
-
-            .@{ant-prefix}-slider-dot {
-                border-color: var(--theme-component-bg) !important;
-            }
-        }
-
-        &.@{ant-prefix}-slider {
-            .@{ant-prefix}-slider-rail,
-            .@{ant-prefix}-slider-track,
-            .@{ant-prefix}-slider-step {
-                height: 10px;
-            }
-
-            .@{ant-prefix}-slider-dot {
-                position: absolute;
-                top: 0;
-                width: 1px;
-                height: 10px;
-                margin-left: -1px;
-                background-color: var(--theme-component-bg);
-                border: 1px solid var(--theme-component-bg);
-                border-radius: 0;
-                cursor: pointer;
-            }
-
-            .@{ant-prefix}-slider-handle {
-                &::after {
-                    position: absolute;
-                    top: 4px;
-                    right: 3px;
-                    width: 4px;
-                    height: 10px;
-                    border: 1px solid #fff;
-                    border-top: 0;
-                    border-bottom: 0;
-                    content: '';
-                }
-
+        .@{ant-prefix}-slider-handle::after {
+            &:focus,
+            &:hover {
                 width: 12px;
-                height: 20px;
-                background-color: var(--theme-primary-color);
-                border: 1px solid var(--theme-primary-color);
-                border-radius: 0;
+                height: 12px;
             }
         }
 
-        .@{ant-prefix}-slider-mark {
-            margin-top: 10px;
+        .@{ant-prefix}-slider-handle-dragging {
+            &.@{ant-prefix}-slider-handle::after {
+                box-shadow: 0 0 0 2px var(--theme-primary-color);
+            }
+        }
+        .@{ant-prefix}-slider-rail {
+            background: var(--theme-border-color-base);
+        }
 
-            .@{ant-prefix}-slider-mark-text {
-                color: var(--theme-placeholder-color);
+        .@{ant-prefix}-slider-dot {
+            width: 4px;
+            height: 4px;
+            border: 2px solid #fff;
+            inset-block-start: 0;
+        }
+
+        &.@{ant-prefix}-slider-disabled {
+            .@{ant-prefix}-slider-handle:hover::after {
+                width: 10px;
+                height: 10px;
+            }
+            .@{ant-prefix}-slider-handle::after {
+                box-shadow: 0 0 0 1px var(--color-gray-5);
             }
         }
     }
