--- a/packages/ui/steps/src/index.less
+++ b/packages/ui/steps/src/index.less
@@ -98,7 +98,11 @@
     .@{ant-prefix}-steps-item-error {
         .@{ant-prefix}-steps-item-icon {
             line-height: 28px;
-            // background-color: #FFF;
+            background-color: #FFF;
+
+            .@{ant-prefix}-steps-icon {
+                color: var(--error-color);
+            }
         }
 
         // 当前错误状态
@@ -204,8 +208,28 @@
 
     &.@{ant-prefix}-steps-vertical.@{ant-prefix}-steps-dot .@{ant-prefix}-steps-item > .@{ant-prefix}-steps-item-container > .@{ant-prefix}-steps-item-tail {
         left: -9px;
+
+        &::after {
+            margin-inline-start: 12px;
+        }
     }
     // == 结束dot状态调整 ==
+
+
+    &.@{ant-prefix}-steps-label-vertical {
+        .@{ant-prefix}-steps-item-content {
+            margin-top: 8px;
+        }
+
+        .@{ant-prefix}-steps-item-icon {
+            margin-inline-start: 42px;
+        }
+
+        &.@{ant-prefix}-steps-dot .@{ant-prefix}-steps-item-icon {
+            margin-inline-start: 67px;
+        }
+
+    }
 }
 
 // ==================== Compact 模式 ====================
@@ -237,13 +261,27 @@
 .@{ant-prefix}-steps-label-vertical:not(.@{ant-prefix}-steps-dot) .@{ant-prefix}-steps-item-container .@{ant-prefix}-steps-item-tail {
     margin-inline-start: 58px;
     padding-top: 3.5px;
+    padding-bottom: 3.5px;
 }
 
-.@{ant-prefix}-steps:not(.@{ant-prefix}-steps-dot) .@{ant-prefix}-steps-item .@{ant-prefix}-steps-item-tail {
-    top: 12px;
+.@{ant-prefix}-steps {
+    &.@{ant-prefix}-steps-dot {
+        .@{ant-prefix}-steps-item-icon {
+            height: 8px;
+            width: 8px;
+        }
+
+        .@{ant-prefix}-steps-item:first-child .@{ant-prefix}-steps-icon-dot {
+            left: 2px;
+        }
+
+        .@{ant-prefix}-steps-item-tail::after {
+            width: ~"calc(100% - 20px)";
+        }
+    }
+
+    &:not(.@{ant-prefix}-steps-dot) .@{ant-prefix}-steps-item .@{ant-prefix}-steps-item-tail {
+        top: 12px;
+    }
 }
 
-.@{ant-prefix}-steps.@{ant-prefix}-steps-dot .@{ant-prefix}-steps-item-icon {
-    height: 8px;
-    width: 8px;
-}
