fix: 调整timeline, upload

--- a/packages/ui/upload/src/index.less
+++ b/packages/ui/upload/src/index.less
@@ -1,7 +1,14 @@
 @osui-upload-class-prefix: osui-upload;
 
 .@{osui-upload-class-prefix} {
-    &.@{ant-prefix}-upload.@{ant-prefix}-upload-drag,
+
+    &.@{ant-prefix}-upload-wrapper {
+        &.@{ant-prefix}-upload-picture-card-wrapper .@{ant-prefix}-upload.@{ant-prefix}-upload-select {
+            border: 1px solid var(--theme-border-color-base);
+        }
+    }
+
+    .@{ant-prefix}-upload.@{ant-prefix}-upload-drag,
     .@{ant-prefix}-upload-list-picture-card .@{ant-prefix}-upload-list-item-uploading.@{ant-prefix}-upload-list-item,
     .@{ant-prefix}-upload.@{ant-prefix}-upload-select-picture-card {
         background-color: var(--theme-component-bg);
