--- a/packages/ui/timeline/src/index.less
+++ b/packages/ui/timeline/src/index.less
@@ -1,6 +1,20 @@
 @osui-timeline-class-prefix: osui-timeline;
 
 .@{osui-timeline-class-prefix} {
+
+    &.@{ant-prefix}-timeline {
+
+        .@{ant-prefix}-timeline-item-head {
+            border: 2px solid transparent;
+            border-color: var(--theme-primary-color);
+        }
+
+        .@{ant-prefix}-timeline-item-tail {
+            inset-inline-start: 5px;
+            border-inline-start: 1px solid var(--theme-border-color-base);
+        }
+    }
+
     .@{ant-prefix}-timeline-item-content {
         margin-left: var(--timeline-item-content-margin-left);
         // 里面是link时，颜色默认为文字色
