fix: 修复checkbox,tree,tree-select

--- a/packages/ui/tree-select/src/index.less
+++ b/packages/ui/tree-select/src/index.less
@@ -2,8 +2,9 @@
 
 .@{osui-tree-select-class-prefix} {
     &-dropdown {
-        .@{ant-prefix}-select-tree-treenode-selected {
+        .@{ant-prefix}-select-tree-node-content-wrapper.@{ant-prefix}-select-tree-node-selected {
             color: var(--tree-select-selected-color);
+            background-color: var(--tree-node-selected-bg) !important;
         }
     }
 
